add pressrelase link

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -24,7 +24,7 @@
                       <a href="#" class="nav-link">Write for Us</a>
                     </li>
                     <li class="nav-item">
-                      <a href="#" class="nav-link">In the Press</a>
+                      <a href="https://ica.tripura.gov.in/press-release" class="nav-link">In the Press</a>
                     </li>
                   </ul>
                   <ul class="navbar-top-right-menu">
