--- a/views/home.hbs
+++ b/views/home.hbs
@@ -116,7 +116,7 @@
                             <div class="position-relative">
                               <div class="rotate-img">
                                 <img
-                                  src="/images/dashboard/home_7.jpg"
+                                  src="/images/video/video1.jpg"
                                   alt="thumb"
                                   class="img-fluid"
                                 />
