--- a/views/news.hbs
+++ b/views/news.hbs
@@ -14,7 +14,7 @@
                   <p class="fs-13 text-muted mb-0">{{data.author}} for NEH</p>
                 </div>
                 <div class="col-lg-2"> 
-                  <div class="share-btn" data-url="https://localhost:3000/{{data.url}}" data-title="{{data.title}}" data-desc="{{data.description}}">
+                  <div class="share-btn" data-url="https://www.neherald.com/{{data.url}}" data-title="{{data.title}}" data-desc="{{data.description}}">
                    <div class="row">
                      <div class="col-lg-12 mt-4 mb-4 social-btn">
                          <a class="btn-facebook" data-id="fb"><i class="mdi mdi-facebook"></i>Facebook</a>
