--- a/public/scss/_home.scss
+++ b/public/scss/_home.scss
@@ -53,3 +53,10 @@ a,a:hover{
         color:black;
     }
 }
+
+
+.center-block {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+ }
