--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -15,7 +15,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="https://www.youtube.com/channel/UCxfmySCv2BbfKrKrsHRYtBg" target="_blank">
                         <i class="mdi mdi-youtube"></i>
                       </a>
                     </li>
