--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -77,7 +77,7 @@
                          <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Tripura</a>
                           <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">About Us</a>
+                            <a class="dropdown-item" href="/aboutus-tripura">About Us</a>
                             <a class="dropdown-item" href="#">Governor</a>
                             <a class="dropdown-item" href="#">Chief Minister</a>
                             <a class="dropdown-item" href="#">Council of Ministers</a>
@@ -88,8 +88,8 @@
                           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">NorthEast</a>
                           <div class="dropdown-menu">                         
                             <a class="dropdown-item" href="#">About NorthEast</a>
-                            <a class="dropdown-item" href="#">State</a>
-                            <a class="dropdown-item" href="/allnews?category=NEH Report">News</a>                          
+                            <a class="dropdown-item" href="#">States</a>
+                           <!-- <a class="dropdown-item" href="/allnews?category=NEH Report">News</a>   -->                       
                           </div>
                         </li>
                         <li class="nav-item">
@@ -125,7 +125,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="https://www.youtube.com/channel/UCxfmySCv2BbfKrKrsHRYtBg" target="_blank">
                         <i class="mdi mdi-youtube"></i>
                       </a>
                     </li>
