--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -130,7 +130,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="https://twitter.com/HeraldNortheast" target="_blank">
                         <i class="mdi mdi-twitter"></i>
                       </a>
                     </li>
