--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -20,7 +20,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="https://twitter.com/HeraldNortheast">
                         <i class="mdi mdi-twitter"></i>
                       </a>
                     </li>
