durga puja changes

--- a/public/scss/_footer.scss
+++ b/public/scss/_footer.scss
@@ -56,8 +56,8 @@ footer {
   }
   .logo-text span{
     font-size: 35px;
-    color:white;
-    font-family:  mistral;
+    color:red;
+   
   }
   @media (max-width: 767px) {
   }
