--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -69,6 +69,6 @@
     <script src="javascripts/jquery.easeScroll.js"></script>
   <script src="//cdn.jsdelivr.net/npm/share-buttons/dist/share-buttons.js"></script>
     <!-- End custom js for this page-->
-   
+   <script src="https://cdn.jsdelivr.net/npm/node-marquee/dist/cdn/index.min.js"></script>
 </body>
 </html>
