--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -8,6 +8,7 @@
                   <h5 class="font-weight-normal mt-4 mb-5">
                    Northeast India's premiere News and Views Web portal.
                   </h5>
+                 
                   <ul class="social-media mb-3">
                     <li>
                       <a href="https://www.facebook.com/Northeast-Herald-107605598767348" target="_blank">
@@ -25,6 +26,8 @@
                       </a>
                     </li>
                   </ul>
+
+                   <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=FRJwwZvxAjzcGM7ZmAX2KAZdyCQDrHtbxyqBtQ3QrDegTIKKcLUHQmMwDrqO"></script></span>
                 </div>
                 <div class="col-sm-4">
                   <h3 class="font-weight-bold mb-3">RECENT POSTS</h3>
