--- a/views/news.hbs
+++ b/views/news.hbs
@@ -4,7 +4,7 @@
           <div class="card-body">
             <div class="row">
             <div class="col-sm-10">
-            <h1 class="font-weight-600 mb-4">{{data.description}}</h1>
+            <h1 class="font-weight-600 mb-4">{{data.title}}</h1>
            
             </div>
             </div>
@@ -45,7 +45,7 @@
             </div>
             <div class="row">
                <div class="col-lg-12">
-               <p class="fs-13 text-muted mb-0">By {{data.author}}, published on {{data.publishedAt}}</p>
+               <p class="fs-13 mb-0 "><b>{{data.publishedAt}}</b></p>
                <hr>
                </div>
               
