--- a/views/home.hbs
+++ b/views/home.hbs
@@ -34,7 +34,7 @@
                   <div class="banner-content">
                    <div class="overlay">
                     <div class="badge badge-danger fs-12 font-weight-bold mb-3">
-                      global news
+                      Top News
                     </div>
                     <h1 class="mb-0">{{shortTitle}}</h1>
                     <h1 class="mb-2">
