changed author name in the news hbs page

--- a/views/news.hbs
+++ b/views/news.hbs
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col-lg-10 img">
                   <img src="images/news/{{data.urlToImage}}" alt="image"/>
-                  <p class="fs-13 text-muted mb-0">{{data.author}} for NEH</p>
+                  <p class="fs-13 text-muted mb-0">NEH Report</p>
                 </div>
                 <div class="col-lg-2"> 
                   <div class="share-btn" data-url="https://www.neherald.com/{{data.url}}" data-title="{{data.title}}" data-desc="{{data.description}}">
