--- a/views/home.hbs
+++ b/views/home.hbs
@@ -131,11 +131,11 @@
                           Video
                         </div>
                         <div class="row">
-                          <div class="col-sm-6 grid-margin">
+                          <div class="col-sm-6 grid-margin" onclick="window.open('https://www.youtube.com/watch?v=_zK_ERpESeA&t=32s','_blank').focus">
                             <div class="position-relative">
                               <div class="rotate-img">
                                 <img
-                                  src="/images/video/video1.jpg"
+                                  src="/images/video/youtube1.png"
                                   alt="thumb"
                                   class="img-fluid"
                                 />
@@ -146,7 +146,7 @@
                                 >
                                   <span
                                     class="badge badge-danger font-weight-bold"
-                                    >Lifestyle</span
+                                    >News Videos</span
                                   >
                                   <div class="video-icon">
                                     <i class="mdi mdi-play"></i>
@@ -156,11 +156,11 @@
                             </div>
                           </div>
 
-                          <div class="col-sm-6 grid-margin">
+                          <div class="col-sm-6 grid-margin" onclick="window.open('https://www.youtube.com/watch?v=4sKLHdQ4gdY&t=20s','_blank').focus">
                             <div class="position-relative">
                               <div class="rotate-img">
                                 <img
-                                  src="/images/dashboard/home_8.jpg"
+                                  src="/images/video/youtube2.png"
                                   alt="thumb"
                                   class="img-fluid"
                                 />
@@ -171,7 +171,7 @@
                                 >
                                   <span
                                     class="badge badge-danger font-weight-bold"
-                                    >National News</span
+                                    >News Videos</span
                                   >
                                   <div class="video-icon">
                                     <i class="mdi mdi-play"></i>
@@ -182,11 +182,11 @@
                           </div>
                         </div>
                         <div class="row">
-                          <div class="col-sm-6 grid-margin">
+                          <div class="col-sm-6 grid-margin" onclick="window.open('https://www.youtube.com/watch?v=XxAqwVnyFrA&t=1s','_blank').focus">
                             <div class="position-relative">
                               <div class="rotate-img">
                                 <img
-                                  src="/images/dashboard/home_9.jpg"
+                                   src="/images/video/youtube3.png"
                                   alt="thumb"
                                   class="img-fluid"
                                 />
@@ -197,7 +197,7 @@
                                 >
                                   <span
                                     class="badge badge-danger font-weight-bold"
-                                    >Lifestyle</span
+                                    >News Videos</span
                                   >
                                   <div class="video-icon">
                                     <i class="mdi mdi-play"></i>
@@ -207,11 +207,11 @@
                             </div>
                           </div>
 
-                          <div class="col-sm-6 grid-margin">
+                          <div class="col-sm-6 grid-margin" onclick="window.open('https://www.youtube.com/watch?v=hMks5knbkGc&t=25s','_blank').focus">
                             <div class="position-relative">
                               <div class="rotate-img">
                                 <img
-                                  src="/images/dashboard/home_10.jpg"
+                                   src="/images/video/youtube4.png"
                                   alt="thumb"
                                   class="img-fluid"
                                 />
@@ -222,7 +222,7 @@
                                 >
                                   <span
                                     class="badge badge-danger font-weight-bold"
-                                    >National News</span
+                                    >News Videos</span
                                   >
                                   <div class="video-icon">
                                     <i class="mdi mdi-play"></i>
