--- a/views/home.hbs
+++ b/views/home.hbs
@@ -240,7 +240,7 @@
                           <div class="card-title">
                             Latest Video
                           </div>
-                          <p class="mb-3">See all</p>
+                          <p class="mb-3" window.open('https://www.youtube.com/channel/UCxfmySCv2BbfKrKrsHRYtBg','_blank').focus>See all</p>
                         </div>
                         <div
                           class="d-flex justify-content-between align-items-center border-bottom pb-2"
