--- a/views/home.hbs
+++ b/views/home.hbs
@@ -131,7 +131,7 @@
                           Video
                         </div>
                         <div class="row">
-                          <div class="col-sm-6 grid-margin" onclick="window.open('https://www.youtube.com/watch?v=_zK_ERpESeA&t=32s','_blank').focus">
+                          <div class="col-sm-6 grid-margin cursor-pointer" onclick="window.open('https://www.youtube.com/watch?v=_zK_ERpESeA&t=32s','_blank').focus">
                             <div class="position-relative">
                               <div class="rotate-img">
                                 <img
@@ -156,7 +156,7 @@
                             </div>
                           </div>
 
-                          <div class="col-sm-6 grid-margin" onclick="window.open('https://www.youtube.com/watch?v=4sKLHdQ4gdY&t=20s','_blank').focus">
+                          <div class="col-sm-6 grid-margin cursor-pointer" onclick="window.open('https://www.youtube.com/watch?v=4sKLHdQ4gdY&t=20s','_blank').focus">
                             <div class="position-relative">
                               <div class="rotate-img">
                                 <img
@@ -182,7 +182,7 @@
                           </div>
                         </div>
                         <div class="row">
-                          <div class="col-sm-6 grid-margin" onclick="window.open('https://www.youtube.com/watch?v=XxAqwVnyFrA&t=1s','_blank').focus">
+                          <div class="col-sm-6 grid-margin cursor-pointer" onclick="window.open('https://www.youtube.com/watch?v=XxAqwVnyFrA&t=1s','_blank').focus">
                             <div class="position-relative">
                               <div class="rotate-img">
                                 <img
@@ -207,7 +207,7 @@
                             </div>
                           </div>
 
-                          <div class="col-sm-6 grid-margin" onclick="window.open('https://www.youtube.com/watch?v=hMks5knbkGc&t=25s','_blank').focus">
+                          <div class="col-sm-6 grid-margin cursor-pointer" onclick="window.open('https://www.youtube.com/watch?v=hMks5knbkGc&t=25s','_blank').focus">
                             <div class="position-relative">
                               <div class="rotate-img">
                                 <img
@@ -240,7 +240,7 @@
                           <div class="card-title">
                             Latest Video
                           </div>
-                          <p class="mb-3" window.open('https://www.youtube.com/channel/UCxfmySCv2BbfKrKrsHRYtBg','_blank').focus>See all</p>
+                          <p class="mb-3 cursor-pointer cursor-pointer"  onclick="window.open('https://www.youtube.com/channel/UCxfmySCv2BbfKrKrsHRYtBg','_blank').focus">See all</p>
                         </div>
                         <div
                           class="d-flex justify-content-between align-items-center border-bottom pb-2"
