--- a/views/contactus.hbs
+++ b/views/contactus.hbs
@@ -1,14 +1,26 @@
     <div class="container">
-  <div class="row">
+         <div class="row">
             <div class="col-sm-12">
               <div class="card" data-aos="fade-up">
                 <div class="card-body">
                   <div class="aboutus-wrapper">
-                    <h1 class="mt-5 text-center mb-5">
+                    <h1 class="mt-3 text-center mb-5">
                       Contact Us
                     </h1>
                     <div class="row">
-                      <div class="col-lg-12 mb-5 mb-sm-2">
+   
+                      <div class="col-lg-5 mb-5 mb-sm-2">
+                      <p><a href="https://www.herald.com" style="color:black;text-decoration: underline;" target="_blank">www.neherald.com</a></p>
+                     
+                      <p>HGB Road, Post-Office Choumohani, Opposite Sarkar Nursing Home</p>
+                      <p>Agartala, Tripura (West)</p>
+                      <p>India, Pin:799004</p>
+                      <p style="color:#032a63"><i class="mdi mdi-email"> editor@neherald.com</i></p>
+                      <p style="color:#032a63"><i class="mdi mdi-email"> info@neherald.com</i></p>
+                      <p style="color:#032a63"><i class="mdi mdi-phone">+91 9436120508</i></p>
+
+                      </div>
+                        <div class="col-lg-7 mb-5 mb-sm-2">
                         <form>
                           <div class="row">
                             <div class="col-sm-12">
@@ -59,6 +71,9 @@
                           </div>
                         </form>
                       </div>
+                    </div>
+                    <div class="row">
+                    
                     </div>
                   </div>
                 </div>
