--- a/views/aboutusTripura.hbs
+++ b/views/aboutusTripura.hbs
@@ -1,7 +1,7 @@
 <div class="container">
       <div class="col-sm-12 news">
          <div class="card-body">
-                <h1>About Tripura</h1>
+                <h1 class="m-3">About Tripura</h1>
                  <div class="col-xl-12 stretch-card grid-margin">
                 <div class="center-block">
                   <img
