--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -78,9 +78,9 @@
                           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Tripura</a>
                           <div class="dropdown-menu">
                             <a class="dropdown-item" href="/aboutus-tripura">About Us</a>
-                            <a class="dropdown-item" href="#">Governor</a>
-                            <a class="dropdown-item" href="#">Chief Minister</a>
-                            <a class="dropdown-item" href="#">Council of Ministers</a>
+                            <a class="dropdown-item" href="/governer">Governor</a>
+                            <a class="dropdown-item" href="/chiefminister">Chief Minister</a>
+                            <a class="dropdown-item" href="/ministers">Council of Ministers</a>
                             <a class="dropdown-item" href="#">MLA</a>
                           </div>
                         </li>
