--- a/public/scss/_variables.scss
+++ b/public/scss/_variables.scss
@@ -48,16 +48,16 @@ $theme-colors: (
   dark: #000000
 );
 
-// $theme-gradient-colors: (
-//   primary:         linear-gradient(230deg, #759bff, #843cf6),
-//   secondary:       linear-gradient(to right, #e7ebf0, #868e96),
-//   success:         linear-gradient(45deg, #7bffce, #30c93e),
-//   info:            linear-gradient(to bottom, #0e4cfd, #6a8eff),
-//   warning:         linear-gradient(135deg, #ffc480, #ff763b),
-//   danger:          linear-gradient(316deg, #fc5286, #fbaaa2),
-//   light:           linear-gradient(to right, #cfd9df 0%, #e2ebf0 100%),
-//   dark:            linear-gradient(to right, #7d7979 0%, #000000 100%)
-// );
+ $theme-gradient-colors: (
+   primary:         linear-gradient(230deg, #759bff, #843cf6),
+   secondary:       linear-gradient(to right, #e7ebf0, #868e96),
+  success:         linear-gradient(45deg, #7bffce, #30c93e),
+   info:            linear-gradient(to bottom, #0e4cfd, #6a8eff),
+   warning:         linear-gradient(135deg, #ffc480, #ff763b),
+   danger:          linear-gradient(316deg, #fc5286, #fbaaa2),
+   light:           linear-gradient(to right, #cfd9df 0%, #e2ebf0 100%),
+   dark:            linear-gradient(to right, #7d7979 0%, #000000 100%)
+ );
 
 ////////// COLOR SYSTEM //////////
 
@@ -70,18 +70,18 @@ $border-color-footer: rgba(99, 99, 99, 0.2);
 
 ////////// SOCIAL COLORS //////////
 
-// $social-colors: (
-//   twitter: #2caae1,
-//   facebook: #3b579d,
-//   google: #dc4a38,
-//   linkedin: #0177b5,
-//   pinterest: #cc2127,
-//   youtube: #e52d27,
-//   github: #333333,
-//   behance: #1769ff,
-//   dribbble: #ea4c89,
-//   reddit: #ff4500
-// );
+ $social-colors: (
+   twitter: #2caae1,
+   facebook: #3b579d,
+   google: #dc4a38,
+   linkedin: #0177b5,
+   pinterest: #cc2127,
+   youtube: #e52d27,
+   github: #333333,
+   behance: #1769ff,
+   dribbble: #ea4c89,
+   reddit: #ff4500
+ );
 
 ////////// SOCIAL COLORS //////////
 
