--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,7 +2,10 @@
              <div class="row" data-aos="fade-up">
               <div class="col-xl-12 stretch-card grid-margin">
                <div class="card" >
-     <div class="position-relative" onclick="window.location.href = '/photos'">
+
+
+
+     <div class="position-relative cursor-pointer" onclick="window.location.href = '/photos'">
                   <img
                     src="images/dashboard/banner2.jpeg"
                     alt="banner"
@@ -53,13 +56,13 @@
                   <div class="card-body">
                     <h2>Latest news</h2>
                      {{#latestnews latestnews}}                         
-                      <div class="pr-3 news-a" onclick="window.location.href = '/news?id={{id}}'">
+                      <div class="pr-3 news-a cursor-pointer" onclick="window.location.href = '/news?id={{id}}'">
                         <h5>{{title}}</h5>
                         <div class="fs-12">
                           <span class="mr-2">NEH </span>{{publishedAt}}
                         </div>
                       </div>
-                      <div class="rotate-img latest-news-home" onclick="window.location.href = '/news?id={{id}}'">
+                      <div class="rotate-img latest-news-home cursor-pointer" onclick="window.location.href = '/news?id={{id}}'">
                         <img
                           src="images/news/{{urlToImage}}"
                           alt="thumb"
@@ -77,7 +80,7 @@
                 <div class="card">
                   <div class="card-body">
                    {{#list flashnews}}
-                     <div class="row" onclick="window.location.href = '/news?id={{id}}'">
+                     <div class="row cursor-pointer" onclick="window.location.href = '/news?id={{id}}'">
                       <div class="col-sm-4 grid-margin">
                         <div class="position-relative">
                           <div class="rotate-img">
