--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -3,10 +3,10 @@
             <div class="container">
               <div class="row">
                 <div class="col-sm-5 logo-text">
-                      <span>NorthEast Herald</span> 
+                      <span>Northeast Herald</span> 
                   {{!-- <img src="images/logo.svg" class="footer-logo" alt="" /> --}}
                   <h5 class="font-weight-normal mt-4 mb-5">
-                   Northeast India's premiere News and Views Web portal.
+                   Northeast Herald India's premiere News and Views Web portal.
                   </h5>
                  
                   <ul class="social-media mb-3">
