--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -85,9 +85,9 @@
                           </div>
                         </li>
                           <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">NorthEast</a>
+                          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Northeast</a>
                           <div class="dropdown-menu">                         
-                            <a class="dropdown-item" href="#">About NorthEast</a>
+                            <a class="dropdown-item" href="#">About Northeast</a>
                             <a class="dropdown-item" href="#">States</a>
                            <!-- <a class="dropdown-item" href="/allnews?category=NEH Report">News</a>   -->                       
                           </div>
