--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -43,7 +43,7 @@
               <div class="navbar-bottom">
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="logo-text">
-                   <span><a href="/">Northeast Herlad</a></span> 
+                   <span><a href="/">Northeast Herald</a></span> 
                     {{!-- <a class="navbar-brand" href="#"
                       ><img src="images/logo.svg" alt=""
                     /></a> --}}
