fixed image 3 issue

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -151,7 +151,7 @@
                        </div>
                         <div class="col-sm-4  grid-margin">
                          <div class="card border cursor-pointer"  onclick="window.open('/dailynewsphoto','_blank').focus" >
-                        <img class="card-img-top rounded" src="images/gallery/DailyNewsPholoAlbum/Image3.JPG" alt="The qualified candidates for the Selection Test for Graduate Teachers (STGT)">
+                        <img class="card-img-top rounded" src="images/gallery/DailyNewsPholoAlbum/Image3.jpg" alt="The qualified candidates for the Selection Test for Graduate Teachers (STGT)">
                         <div class="card-body">
                           <p class="card-text">The qualified candidates for the Selection Test for Graduate Teachers (STGT) under Teachers’ Recruitment Board, Tripura (TRBT)  on October 7 morning met Information and Cultural Affairs (ICA) Minister Sushanta Chowdhury at his official residence demanding their early recruitment as government teachers.</p>
                         </div>
