--- a/views/home.hbs
+++ b/views/home.hbs
@@ -158,6 +158,32 @@
                       </div>
                        </div>
                     </div>
+                      <div class="row">
+                       <div class="col-sm-4  grid-margin">
+                        <div class="card border cursor-pointer"  onclick="window.open('/dailynewsphoto','_blank').focus">
+                          <img class="card-img-top rounded" src="images/gallery/DailyNewsPholoAlbum/Image4.JPG" alt="Shopkeepers in Agartala">
+                          <div class="card-body">
+                            <p class="card-text">SUCI activists staged a demonstration in Agartala on October 10 demanding immediate rollback of hiked CNG prices.</p>
+                          </div>
+                        </div>
+                       </div>
+                        <div class="col-sm-4  grid-margin">
+                        <div class="card border cursor-pointer"  onclick="window.open('/dailynewsphoto','_blank').focus">
+                          <img class="card-img-top rounded" src="images/gallery/DailyNewsPholoAlbum/Image5.JPG" alt="Vendors ">
+                          <div class="card-body">
+                            <p class="card-text">AIKS pays tributes to the martyrs of  Golaghati farmers during a memorial programme held at Agartala on October 10.</p>
+                          </div>
+                        </div>
+                       </div>
+                        <div class="col-sm-4  grid-margin">
+                         <div class="card border cursor-pointer"  onclick="window.open('/dailynewsphoto','_blank').focus" >
+                        <img class="card-img-top rounded" src="images/gallery/DailyNewsPholoAlbum/Image6.jpg" alt="The qualified candidates for the Selection Test for Graduate Teachers (STGT)">
+                        <div class="card-body">
+                          <p class="card-text">The Bhutia community traders, who are setting winter garment stall in Agartala every winter, are now making their makeshift stall in Battala TRTC complex in Agartala on October 10.</p>
+                        </div>
+                      </div>
+                       </div>
+                    </div>
                 </div>
                 </div>
                 </div>
