fixed image display issue

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -177,7 +177,7 @@
                        </div>
                         <div class="col-sm-4  grid-margin">
                          <div class="card border cursor-pointer"  onclick="window.open('/dailynewsphoto','_blank').focus" >
-                        <img class="card-img-top rounded" src="images/gallery/DailyNewsPholoAlbum/Image6.jpg" alt="The qualified candidates for the Selection Test for Graduate Teachers (STGT)">
+                        <img class="card-img-top rounded" src="images/gallery/DailyNewsPholoAlbum/Image6.JPG" alt="The qualified candidates for the Selection Test for Graduate Teachers (STGT)">
                         <div class="card-body">
                           <p class="card-text">The Bhutia community traders, who are setting winter garment stall in Agartala every winter, are now making their makeshift stall in Battala TRTC complex in Agartala on October 10.</p>
                         </div>
