--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -12,10 +12,10 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <ul class="navbar-top-left-menu">
                     <li class="nav-item">
-                      <a href="pages/index-inner.html" class="nav-link">Advertise</a>
+                      <a href="#" class="nav-link">Advertise</a>
                     </li>
                     <li class="nav-item">
-                      <a href="pages/aboutus.html" class="nav-link">About</a>
+                      <a href="#" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
                       <a href="#" class="nav-link">Events</a>
