updated today's news

--- a/views/partials/flashnews.hbs
+++ b/views/partials/flashnews.hbs
@@ -5,7 +5,7 @@
                 <span class="badge badge-dark mr-3">Flash news</span>
                  <p class="mb-0" onclick="window.location.href = '/allnews?category=NEH Report'">
       <marquee >
-       Northeast Herald starts its journey on auspicious day of Maha Shasti.   Northeast Herald extend its greetings and wishes of Durga Puja to all viewers, well wishers.
+       President Droupadi Murmu arrived Agartala on Wednesday morning on her maiden two-day visit to the state.
         
         </marquee>
     </p>
