--- a/views/home.hbs
+++ b/views/home.hbs
@@ -210,10 +210,10 @@
               </div>
               <div class="row">
                 <div class="col-sm-6 grid-margin cursor-pointer"
-                  onclick="window.open('https://www.youtube.com/watch?v=_zK_ERpESeA&t=32s','_blank').focus">
+                  onclick="window.open('https://www.youtube.com/watch?v=dFhrNRs16Z0','_blank').focus">
                   <div class="position-relative">
                     <div class="rotate-img">
-                      <img src="/images/video/youtube1.png" alt="thumb" class="img-fluid" />
+                      <img src="/images/video/youtube6.png" alt="thumb" class="img-fluid" />
                     </div>
                     <div class="badge-positioned w-90">
                       <div class="d-flex justify-content-between align-items-center">
@@ -227,10 +227,10 @@
                 </div>
 
                 <div class="col-sm-6 grid-margin cursor-pointer"
-                  onclick="window.open('https://www.youtube.com/watch?v=4sKLHdQ4gdY&t=20s','_blank').focus">
+                  onclick="window.open('https://www.youtube.com/watch?v=09q-y6utlSA','_blank').focus">
                   <div class="position-relative">
                     <div class="rotate-img">
-                      <img src="/images/video/youtube2.png" alt="thumb" class="img-fluid" />
+                      <img src="/images/video/youtube5.png" alt="thumb" class="img-fluid" />
                     </div>
                     <div class="badge-positioned w-90">
                       <div class="d-flex justify-content-between align-items-center">
@@ -245,10 +245,10 @@
               </div>
               <div class="row">
                 <div class="col-sm-6 grid-margin cursor-pointer"
-                  onclick="window.open('https://www.youtube.com/watch?v=XxAqwVnyFrA&t=1s','_blank').focus">
+                  onclick="window.open('https://www.youtube.com/watch?v=QDA5WpNCIIc','_blank').focus">
                   <div class="position-relative">
                     <div class="rotate-img">
-                      <img src="/images/video/youtube3.png" alt="thumb" class="img-fluid" />
+                      <img src="/images/video/youtube7.png" alt="thumb" class="img-fluid" />
                     </div>
                     <div class="badge-positioned w-90">
                       <div class="d-flex justify-content-between align-items-center">
@@ -262,10 +262,10 @@
                 </div>
 
                 <div class="col-sm-6 grid-margin cursor-pointer"
-                  onclick="window.open('https://www.youtube.com/watch?v=hMks5knbkGc&t=25s','_blank').focus">
+                  onclick="window.open('https://www.youtube.com/watch?v=2I26WFlqp8c','_blank').focus">
                   <div class="position-relative">
                     <div class="rotate-img">
-                      <img src="/images/video/youtube4.png" alt="thumb" class="img-fluid" />
+                      <img src="/images/video/youtube8.png" alt="thumb" class="img-fluid" />
                     </div>
                     <div class="badge-positioned w-90">
                       <div class="d-flex justify-content-between align-items-center">
